@@ -52,6 +52,13 @@ extern "C" {
 #define VIPS_META_XMP_NAME "xmp-data"
 
 /**
+ * VIPS_META_IPCT_NAME:
+ *
+ * The name that JPEG read and write operations use for the image's IPCT data.
+ */
+#define VIPS_META_IPCT_NAME "ipct-data"
+
+/**
  * VIPS_META_ICC_NAME:
  *
  * The name we use to attach an ICC profile. The file read and write
